2006-01-28 Perry
 PATCH: [ 1414904 ] updated italian translation for winmerge 2.5.3.1
  Submitted by A. Decorte
  InnoSetup\Languages: Italian.isl
 PATCH: [ 1415165 ] Updated Swedish translation for 2.5.3.1+
  Submitted by Hans Eriksson
  Src\Languages\Swedish: MergeSwedish.rc
 PATCH: [ 1414195 ] Delete two old TODO notes
  Src: ChildFrm.cpp

2006-01-26 Kimmo
 PATCH: [ 1413230 ] Use HtmlHelp API to open help
  Src: MainFrm.cpp Merge.dsp

2006-01-25 Perry
 BUG: [ 1412237 ] InitOption return value wrong if RegCreateKey fails
  Fix unused wrong return value of InitOption & improve one comment
  Src/Common: OptionsMgr.cpp
 BUG: [ 1414868 ] Bug in byte_compare (early finish)
  (Also added some comments.)
  Src: DiffWrapper.cpp

2006-01-24 WinMerge experimental release 2.5.3.1 (cvs)

2006-01-23 Kimmo
 PATCH: [ 1406840 ] Use HTMLHelp locally
  Src: MainFrm.cpp
 PATCH: [ 1411727 ] Merge inactive diff when cursor is inside it
  Src: MergeDoc.cpp MergeDoc.h MergeEditView.cpp MergeEditView.h

2006-01-23 Perry
 Add repro files to selftests from 
  BUG [ 1406950 ] QuickCompare vs diffutils, disagree on trailing whitespace
 Current selftests status: Failure count: 9 (of 108)
  Failing -b t002 (all 3 platforms)
  Failing -bi t002 (all 3 platforms)
  Failing -b bug1406950 (all 3 platforms)
 PATCH: [ 1406950 ] QuickCompare vs diffutils, disagree on trailing whitespace
  Src: ByteComparator.cpp
 (selftests results unimproved, because selftest uses diffutils core, not QuickCompare)

2006-01-22 Perry
 PATCH: [ 1405540 ] Cleanup filters dialog
  Src: FileFiltersDlg.cpp FileFiltersDlg.h

2006-01-22 Tim
 PATCH: [ 1411102 ] Add '*.dsl' and '*.jsp' to syntax highlighter
  Src/editlib: ccrystaleditview.cpp

2006-01-22 Perry
 PATCH: [ 1411406 ] self-tests and new arguments and new diff2winmerge.exe
  Src: Changes.txt MainFrm.cpp MainFrm.h Merge.cpp Merge.h MergeArgs.cpp
  Src/Common: OptionsMgr.cpp OptionsMgr.h
  New directory WinMerge/diff2winmerge, for diff2winmerge utility